# wheel_opencv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  keyboard.cpp  tracking.py
include/: app.h  keyboard.h  pedal.h
include/controllers/: controller.h  pedal.h  wheel.h
include/trackers/: controllertracker.h  pedaltracker.h  wheeltracker.h
include/utils/: config.h  stream.h
src/: app.cpp  keyboard.cpp  keyboardss.cpp  main.cpp  pedal.cpp
src/controllers/: pedal.cpp  wheel.cpp
src/trackers/: controllertracker.cpp  pedaltracker.cpp  wheeltracker.cpp
src/utils/: config.cpp  keyboard.cpp  stream.cpp
